post-performance GUI tweaks. quick check on appropriate lock placement.

--- a/controlPanel/templates/index.html
+++ b/controlPanel/templates/index.html
@@ -18,10 +18,7 @@
       <div class="containter">
         <div class="row justify-content-center gx-0 m-1 border border-1 rounded" id="master-panel">
           <div class="col mx-1 p-3" id="master-settings">
-            <div class="row justify-content-center align-items-center">
-              <p class="text-center h4">Master Settings</p>
-            </div>
-            <hr>
+            <p class="text-center h4">Master Settings</p>
             <div class="row align-items-center m-auto">
               <div class="col-3 text-center">
                 <button class="btn btn-sm btn-outline-secondary  m-1" id="networks-button">
@@ -111,9 +108,10 @@
               </div>
             </div>
           </div>
+
           <div class="col mx-1  border-1 border-start border-end p-3" id="master-message">
             <p class="text-center h4">Master Message</p>
-            <div class="row justify-content-center">
+            <div class="row align-items-center justify-content-center text-center">
               <div class="col">
                 <textarea class="form-control m-1" rows="3" name="message" id="master-message-content" placeholder="Send a message."></textarea>
               </div>
@@ -124,12 +122,12 @@
               </div>
             </div>
             <div class="row align-items-center justify-content-center text-center">
-              <div class="col">
+              <div class="col-8">
                 <label for="master-message-interval-range" class="form-label m-1">interval</label>
-                <input type="range" class="form-range w-75 m-1" min="50" max="2500" step="1" id="master-message-interval-range" value="1000">
+                <input type="range" class="form-range w-50 m-1" min="50" max="2500" step="1" id="master-message-interval-range" value="1000">
                 <span id="master-message-interval">1000</span>
               </div>
-              <div class="col">
+              <div class="col-4">
                 <div class="d-inline-block form-check form-switch m-1">
                   <input class="form-check-input" type="checkbox" id="master-message-interval-toggle">
                   <label class="form-check-label m-1" for="master-message-interval-toggle">repeat</label>
