--- a/controlPanel/templates/index.html
+++ b/controlPanel/templates/index.html
@@ -7,10 +7,10 @@
     <meta name="author" content="Control Panel">
     <title>tinyDragonPrey</title>
 
-    <link href="./static/bootstrap.min.css" rel="stylesheet">
-    <script src="./static/bootstrap.bundle.min.js"></script>
+    <link href="/static/bootstrap.min.css" rel="stylesheet">
+    <script src="/static/bootstrap.bundle.min.js"></script>
 
-    <script src="./static/controlPanel.js"></script>
+    <script src="/static/controlPanel.js"></script>
 
   </head>
   <body>
